# cpp

./: .bash_profile  .gitignore  CMAKE_3.24_Help.txt  CMakeLists.txt  LIB_HELP.txt  MSVC Help for CL.exe.txt  Makefile  ReadMe.md  build.bat  build.mk  build.sh  clean cmake builds.sh  common.mak  configure.mk  main.cpp  makeLib  mkdir.cmake  nmake help.txt  sample.cpp  setlibdirs.cmake
FUtil/: .gitignore  CMakeLists.txt
FUtil/include/: cryptographer.hpp  printer.hpp  splitnmerge.hpp  splitter.hpp
FUtil/src/: cryptographer.cpp  main.cpp  printer.cpp  splitnmerge.cpp  splitter.cpp
HydraExpert/: common.h  config.cpp  config.h  endpoint.cpp  endpoint.h  http.cpp  http.h  hydra_expert.cpp  hydra_expert.h  info.cpp  main.cpp  makefile  networking.cpp  networking.h  server.cpp  server.h  socket.cpp  socket.h
MFCTemplate/: MFCTemplate.sln  MFCTemplate.vcxproj  MFCTemplate.vcxproj.filters  MyApp.h  main.cpp
OpenCLPractice/: makefile  makefile.nmake
OpenCLPractice/include/: pch.h
OpenCLPractice/src/: kernel.c  main.cpp
SecureNotes/include/: buffer_saver.h  file_worker.h  saver.h
SecureNotes/src/: buffer_saver.cpp  file_worker.cpp  main.cpp  saver.cpp
common/: CMakeLists.txt  makefile
common/include/: colored_console.h  colored_console.hpp  common.h  common.hpp  exports.hpp  logger.h  logger.hpp  macro_funcs.h  pch.hpp  permute.h  singly_linked_list.h  sort.h  tests.h
common/src/: boost_test.cpp  colored_console.cpp  common.c  common.cpp  logger.cpp  main.cpp  permute.c  singly_linked_list.c  sort.c  tests.c
leetcode/data/: MinimumLength_testcase_3.txt
leetcode/include/: leetcode.h  leetcode.hpp  remove_node_from_end.h  stack.hpp  test.hpp
leetcode/src/: leetcode.cpp  main.cpp  maximal_rectangle.c  maximum_sum.cpp  remove_node_from_end.c  secrets.cpp  set_mismatch.c  test.cpp
my psql api/include/: my_psql_api.h  query.h
my_psql_api/: ReadMe.md  main.cpp
my_psql_api/include/: my_psql_api.h
my_psql_api/src/: main.cpp  my_psql_api.cpp  query.cpp
network/: CMakeLists.txt  makefile  network.cpp  other.cpp
network/include/: Addr.h  Networking.h  connection.h  includes.hpp  interfaces.h  socket.h  socket_factory.h  usings.h
network/lib/: connection.cpp  interfaces.cpp  networking.cpp  socket.cpp  socket_factory.cpp
network/resource/: get.txt
network/src/: CMakeLists.txt  client.cpp  server.cpp  test.cpp
network/templates/: response-ok.txt
ngspice/: main.cpp  ngspice.lib
ngspice/fullwave-rect/: fullwave-rect-0.166667ms-simdata.csv  fullwave-rect.cir
other/: CMakeLists.txt  MyGUID.hpp  ReadMe.md
other/include/: MyGUID.hpp
other/src/: Client.cpp  MyGUID.cpp  Server.cpp  shared_memory.cc
profiler/: CMakeLists.txt
profiler/include/: memfiler.hpp  parallelfiler.hpp  perfiler.hpp  profiler.hpp  timfiler.hpp
profiler/src/: main.cpp  memfiler.cpp  parallelfiler.cpp  perfiler.cpp  profiler.cpp  timfiler.cpp
server/: CMakeLists.txt  makefile
server/include/: server.h
server/src/: main.c  response.c  server.c
testapp/: CMakeLists.txt  makefile  makefile_vs
testapp/include/: testapp.hpp
testapp/src/: main.cpp
threading/: CMakeLists.txt
threading/include/: linuxthreading.h  threading.h  winthreading.h
threading/src/: helper.c  main.c  threading.c  winthreading.c
